# hip_kernels

./: .gitignore  01_helloWorld  01_helloWorld.cpp  CMakeLists.txt  README.md  TODO.md  hip_helloWorld  test_gemm.sh
ch01/: 01_helloWorld  01_helloWorld.cpp  CMakeLists.txt
ch02/: 02_vecAdd  02_vecAdd.cpp  CMakeLists.txt
ch03/: 03_colorToGrayscale.cpp  03_imageBlur  03_imageBlur.cpp  03_matrixMultiplication  03_matrixMultiplication.cpp  CMakeLists.txt  colorToGrayscale  colorToGrayscale.cpp
ch04/: 04_tiledMatrixMultiplication  04_tiledMatrixMultiplication.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
convolution/: CMakeLists.txt  basic_convolution.cpp  basic_convolution_Fcmem.cpp  naive_convolution.cpp  tiled_convolution.cpp
gemm/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mfma_gemm.cpp  naive_gemm.cpp  online_softmax.cpp  tiled_gemm.cpp
include/: math.hpp  mfma_utility.hpp
include/HIP/: HIP_Utils.hpp
reduction/: 01_reduction_atomic.cpp  02_reduction_shared.cpp  03_reduction_sequential.cpp  04_reduction_contiguous.cpp  05_warp_reduce.cpp  06_grid_reduction.cpp  CMakeLists.txt  README.md  benchmark_all.sh
rms/: 01_rms_normalization.cpp  CMakeLists.txt  README.md
softmax/: 01_naive_softmax.cpp  CMakeLists.txt  README.md
utility/: cpu_verify.hpp  hip_utility.hpp  ops_gemm.hpp  vector_match.hpp
